# Statiq

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/axum-api/: Cargo.toml
examples/axum-api/src/: main.rs
examples/leptos-ssr/: Cargo.toml
examples/leptos-ssr/src/: app.rs  main.rs
examples/tauri-app/: Cargo.toml  tauri.conf.json
examples/tauri-app/frontend/: index.html
examples/tauri-app/src/: main.rs
sqlservice/: Cargo.toml  README.md
sqlservice-macros/: Cargo.toml  LICENSE-APACHE
sqlservice-macros/src/: lib.rs
sqlservice-macros/src/entity/: binder_gen.rs  mapper_gen.rs  mod.rs  parse.rs  sql_gen.rs
sqlservice-macros/src/params/: mod.rs  params_macro.rs
sqlservice/src/: config.rs  error.rs  lib.rs  params.rs  repository.rs  row.rs  service.rs  transaction.rs
sqlservice/src/cache/: mod.rs  noop.rs  redis.rs
sqlservice/src/pool/: connection.rs  mod.rs
sqlservice/src/query/: builder.rs  mod.rs
sqlservice/src/sproc/: mod.rs
sqlservice/src/testing/: mock.rs  mod.rs
statiq/: Cargo.toml
statiq-macros/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
statiq-macros/src/: lib.rs
statiq-macros/src/entity/: attrs.rs  binder_gen.rs  mapper_gen.rs  mod.rs  parse.rs  sql_gen.rs
statiq-macros/src/params/: mod.rs  params_macro.rs
statiq/src/: circuit_breaker.rs  config.rs  entity.rs  error.rs  factory.rs  lib.rs  logging.rs  params.rs  row.rs  service.rs  stream.rs  transaction.rs
statiq/src/cache/: local.rs  mod.rs
statiq/src/pool/: binding.rs  connection.rs  metrics.rs  mod.rs  pooled.rs
statiq/src/query/: builder.rs  mod.rs  order.rs  registry.rs
statiq/src/sproc/: mod.rs
statiq/src/testing/: mock.rs
