[workspace]
members = [
    "sqlservice",
    "sqlservice-macros",
]
resolver = "2"

# ── Shared package metadata (inherited by member crates) ─────────────────────
[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"
authors      = ["Yasin Akmaz <akmazkedy@gmail.com>"]
repository   = "https://github.com/yasinakmaz/Statiq"
homepage     = "https://github.com/yasinakmaz/Statiq"

# ── Shared dependencies ───────────────────────────────────────────────────────
[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
tokio-util         = { version = "0.7",  features = ["full"] }
odbc-api           = { version = "9",    features = ["narrow"] }
redis              = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["json", "env-filter"] }
crossbeam-channel  = "0.5"
futures            = "0.3"
async-trait        = "0.1"
chrono             = { version = "0.4",  features = ["serde"] }
rust_decimal       = { version = "1",    features = ["serde-with-str"] }
uuid               = { version = "1",    features = ["serde", "v4"] }
