[package]
name          = "statiq"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description   = "Zero-overhead, compile-time MSSQL service for Rust — stored procedures, async CRUD, connection pooling, static dispatch"
keywords      = ["mssql", "sql-server", "odbc", "database", "async"]
categories    = ["database", "asynchronous"]
readme        = "README.md"
documentation = "https://docs.rs/statiq"
exclude       = [".github/**", "tests/**"]

[features]
axum    = ["dep:axum"]
tauri   = []
testing = []

[dependencies]
statiq-macros      = { path = "../statiq-macros", version = "0.2.0" }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
odbc-api           = { workspace = true }
redis              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel  = { workspace = true }
futures            = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true }
rust_decimal       = { workspace = true }
uuid               = { workspace = true }
axum = { version = "0.8.8", optional = true, default-features = false, features = ["json", "http1"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["test-util"] }
