[package]
name    = "axum-api"
version = "0.1.0"
edition = "2021"

# SQL tablosu (MSSQL'de oluşturulması gerekir):
# CREATE TABLE dbo.Products (
#     Id    INT IDENTITY(1,1) PRIMARY KEY,
#     Name  NVARCHAR(200) NOT NULL,
#     Price FLOAT         NOT NULL,
#     Stock INT           NOT NULL DEFAULT 0,
#     Active BIT          NOT NULL DEFAULT 1
# );

[dependencies]
statiq        = { path = "../../statiq", features = ["axum"] }
statiq-macros = { path = "../../statiq-macros" }

axum          = "0.8"
tower-http    = { version = "0.6", features = ["cors", "trace"] }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
